# multi-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
app/: streamlit_app.py
data/: redevelopment_raw.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  MapPanel.tsx  Sidebar.tsx
frontend/hooks/: useChat.ts
frontend/public/geodata/: metro_districts.json
frontend/types/: index.ts
rag/docs/: 가락동.txt  가양동.txt  가정동.txt  가좌동.txt  가평군_상권.txt  가평군_학군.txt  간석동.txt  갈산동.txt  감정동.txt  강남구_재건축재개발.txt  강남구_학군.txt  강동구_재건축재개발.txt  강동구_학군.txt  강릉시_상권.txt  강릉시_학군.txt  강북구_재건축재개발.txt  강북구_학군.txt  강서구_재건축재개발.txt  강서구_학군.txt  강진군_상권.txt  강진군_학군.txt  강화군_학군.txt  개봉동.txt  개포동.txt  거제시_상권.txt  거제시_학군.txt  거창군_상권.txt  거창군_학군.txt  경산시_상권.txt  경산시_학군.txt  경주시_상권.txt  경주시_학군.txt  계룡시_상권.txt  계룡시_학군.txt  계산동.txt  계양구_학군.txt  고덕동.txt  고령군_상권.txt  고령군_학군.txt  고림동.txt  (+622 more)
scripts/: build_commercial_docs.py  build_rag_docs.py  build_vector_index.py  collect_redevelopment.py  collect_school_district.py  draw_architecture.py  eval.py  eval_rag.py  import_commercial_csv.py  import_education_csv.py  import_transport_csv.py  migrate_db.py
src/multi_agent/: config.py  team.py
src/multi_agent/api/: main.py
tests/: conftest.py  test_team.py  test_tools.py
tests/eval/: geval_correlation.py  golden_set.json  human_scores.json  metrics.py  run_eval.py  test_llm_quality.py  test_system_metrics.py
(+47 files in other folders)
